// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  width: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  Test Cell
</div>
`;

exports[`Cell renders with multiple widths 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  width: 100%;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

@media (min-width:768px) {
  .c0 {
    width: 50%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 25%;
  }
}

<div
  className="c0"
  width={
    Array [
      1,
      "half",
      0.25,
    ]
  }
>
  Test
</div>
`;

exports[`Cell renders with proper width 1`] = `
.c0 {
  box-sizing: border-box;
  display: block;
  width: 50%;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<div
  className="c0"
  width={0.5}
>
  Test
</div>
`;
